[carenet] sync with upstream

--- a/www.city.kobe.lg.jp/life/support/carenet/shisetsu/28kokuyuuchi_kekka.html
+++ b/www.city.kobe.lg.jp/life/support/carenet/shisetsu/28kokuyuuchi_kekka.html
@@ -14,7 +14,7 @@
 <meta name="format-detection" content="telephone=no" />
 
 <meta name="robots" content="ALL" /><meta name="keywords"
-    content="28年度　介護保険　国有地　特養　活用　募集　整備　事業者" />
+    content="平成28年度　国有地　介護施設　募集　2016年　整備事業者" />
 <script type="text/javascript" src="/js/common.js"></script> 
 
 <!-- 音声関連 ここから --> 
@@ -37,13 +37,13 @@
   ga('send', 'pageview');
 
 </script>
-<title>神戸市：平成28年度国有地を活用して介護保険施設等を整備する事業者の募集について </title>
+<title>神戸市：平成28年度国有地を活用して介護施設を整備する事業者募集の選考結果について </title>
 <meta property="og:title"
-      content="神戸市：平成28年度国有地を活用して介護保険施設等を整備する事業者の募集について" />
+      content="神戸市：平成28年度国有地を活用して介護施設を整備する事業者募集の選考結果について" />
 <meta property="og:type" content="article" />
 
 <meta property="og:url"
-      content="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/28kokuyuuchi_boshu.html" />
+      content="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/28kokuyuuchi_kekka.html" />
 <meta property="og:image" content="http://www.city.kobe.lg.jp/img/sns.gif" />
 <meta property="og:site_name" content="神戸市ホームページ" />
 <meta property="og:locale" content="ja_JP" />
@@ -220,80 +220,40 @@
     href="/life/index.html">くらし・手続き</a> ＞ <a
     href="/life/support/index.html">年金・保険・税</a> ＞ <a
     href="/life/support/carenet/index.html">介護保険</a> ＞ <a
-    href="/life/support/carenet/shisetsu/index.html">神戸市内の介護サービス施設一覧</a> ＞ 平成28年度国有地を活用して介護保険施設等を整備する事業者の募集について</p><hr />
+    href="/life/support/carenet/shisetsu/index.html">神戸市内の介護サービス施設一覧</a> ＞ 平成28年度国有地を活用して介護施設を整備する事業者募集の選考結果について</p><hr />
 <div id="container">
 <div id="contents">
 
-    <h1 id="midashitop">平成28年度国有地を活用して介護保険施設等を整備する事業者の募集について</h1>
+    <h1 id="midashitop">平成28年度国有地を活用して介護施設を整備する事業者募集の選考結果について</h1>
     <div class="btnSocialBox">
             <div class="btnSocialInnerBox">
               <span>
                   <a href="https://twitter.com/share"
                      class="twitter-share-button"
-                     data-url="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/28kokuyuuchi_boshu.html"
-                     data-text="神戸市：平成28年度国有地を活用して介護保険施設等を整備する事業者の募集について"
+                     data-url="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/28kokuyuuchi_kekka.html"
+                     data-text="神戸市：平成28年度国有地を活用して介護施設を整備する事業者募集の選考結果について"
                      data-lang="ja">ツイート</a>
                   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                 </span>
               <div class="fb-share-button"
-                   href="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/28kokuyuuchi_boshu.html"
+                   href="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/28kokuyuuchi_kekka.html"
                    layout="button_count"></div>
               </div>
           </div>
-        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2017年1月26日</dd></dl><ul class="attentions"><li>[8月18日]第1回質疑受付の結果を受け、関連ＱＡの内容を更新しました</li></ul><p>「介護離職ゼロ」の実現に向け、用地確保が困難な都市部において、賃料減額といった国有地の更なる活用などにより、介護施設等整備を促進することとされ、近畿財務局より介護施設としての整備が可能と見込まれる国有地について情報提供がありました。<br />これを受け、本市としては、介護施設整備の加速化に資するよう、平成28年度国有地を活用した介護施設整備事業者募集を次の通り実施します。<br /><br />募集の受付期間は終了しました、選考結果についてはこちら。</p><ul class="link-list">
+        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2017年1月26日</dd></dl><p>平成28年7月より公募を実施しておりました、みだしの事業者募集につきまして、選考の結果、下記のとおり事業者を採択いたしましたのでお知らせいたします。</p>
+    <h2 id="midashi75581">採択事業者</h2>
+<table border="1"><tbody><tr><td>国有地No.</td><td>所在地</td><td>事業者</td><td>施設種別</td><td>入所定員</td></tr><tr><td>2</td><td>東灘区深江南町1丁目80番6</td><td>社会福祉法人すみれ会</td><td>特別養護老人ホーム</td><td>80</td></tr><tr><td>3</td><td>東灘区魚崎西町1丁目420番3</td><td>社会福祉法人神戸海星会</td><td>特別養護老人ホーム<br />看護小規模多機能居宅介護事業所</td><td>29<br />登録29</td></tr><tr><td>4</td><td>灘区鶴甲1丁目2番9</td><td>社会福祉法人六甲鶴寿園</td><td>特別養護老人ホーム</td><td>60</td></tr><tr><td>6</td><td>兵庫区荒田町3丁目46-2</td><td>社会福祉法人イエス団</td><td>特別養護老人ホーム</td><td>110</td></tr><tr><td>9</td><td>垂水区舞子台4丁目36番2外3筆</td><td>社会福祉法人惠愛園</td><td>特別養護老人ホーム</td><td>70</td></tr><tr><td>10</td><td>垂水区清水ヶ丘2丁目68番33 外1筆</td><td>（仮称）社会福祉法人華陽会設立準備会</td><td>特別養護老人ホーム</td><td>88</td></tr><tr><td>11</td><td>垂水区上高丸3丁目2252番1863 外3筆</td><td>（仮称）社会福祉法人山緑会設立準備会</td><td>特別養護老人ホーム</td><td>50</td></tr><tr><td>12</td><td>垂水区星陵台3丁目1064番1728 外1筆</td><td>社会福祉法人報恩感謝会</td><td>小規模多機能型居宅介護事業所</td><td>登録29</td></tr><tr><td>13</td><td>垂水区上高丸3丁目2252番1858 外1筆</td><td>社会福祉法人丸</td><td>特別養護老人ホーム<br />介護型ケアハウス<br />小規模多機能型居宅介護事業所</td><td>80<br />26<br />登録29</td></tr></tbody></table>
+  
+    <h2 id="midashi52187">応募総数</h2>
+<table border="1"><tbody><tr><td>国有地No.</td><td>所在地</td><td>応募数</td></tr><tr><td>1</td><td>東灘区住吉山手7丁目1872番198</td><td>応募なし</td></tr><tr><td>2</td><td>東灘区深江南町1丁目80番6</td><td>2事業</td></tr><tr><td>3</td><td>東灘区魚崎西町1丁目420番3</td><td>1事業</td></tr><tr><td>4</td><td>灘区鶴甲1丁目2番9</td><td>1事業</td></tr><tr><td>5</td><td>灘区鶴甲1丁目2番8</td><td>応募なし</td></tr><tr><td>6</td><td>兵庫区荒田町3丁目46-2</td><td>2事業</td></tr><tr><td>7</td><td>垂水区多聞台2丁目28</td><td>応募なし</td></tr><tr><td>8</td><td>垂水区多聞台4丁目116番</td><td>応募なし</td></tr><tr><td>9</td><td>垂水区舞子台4丁目36番2 外3筆</td><td>2事業</td></tr><tr><td>10</td><td>垂水区清水ヶ丘2丁目68番33 外1筆</td><td>1事業</td></tr><tr><td>11</td><td>垂水区上高丸3丁目2252番1863 外3筆</td><td>1事業</td></tr><tr><td>12</td><td>垂水区星陵台3丁目1064番1728 外1筆</td><td>1事業</td></tr><tr><td>13</td><td>垂水区上高丸3丁目2252番1858 外1筆</td><td>1事業</td></tr></tbody></table>
+  
+    <h2 id="midashi46400">（参考）今回実施した事業者募集の資料はこちら</h2><ul class="link-list">
 
             <li>
-              <a href="/life/support/carenet/shisetsu/28kokuyuuchi_kekka.html">平成28年度国有地を活用して介護施設を整備する事業者募集の選考結果について</a>
-              </li>
-    </ul>
-    <h2 id="midashi9973">募集要項</h2><ul class="link-list">
-
-            <li class="doc-pdf">
-              <a href="/life/support/carenet/shisetsu/img/01_H28kokuyuchi_youkou.pdf">平成28年度国有地を活用して介護施設を整備する事業者募集要項（本編）（PDF形式：685KB）</a>
-              </li>
-            <li class="doc-pdf">
-              <a href="/life/support/carenet/shisetsu/img/02_H28kokuyuchi_youkou_shiryou.pdf">平成28年度国有地を活用して介護施設を整備する事業者募集要項（資料編） ※８月２日訂正版（PDF形式：3,043KB）</a>
-              </li>
-            <li class="doc-pdf">
-              <a href="/life/support/carenet/shisetsu/img/06_H28kokuyuchi_boshu_qa.pdf">平成28年度国有地を活用して介護施設を整備する事業者募集要項　関連ＱＡ 【8月18日更新】（PDF形式：266KB）</a>
-              </li>
-    </ul>
-&emsp;&emsp;※資料編33ページ(7)の一部を訂正しております。
-  
-    <h2 id="midashi27739">募集の主な流れ</h2><p>（１）募集要項の配布<br />　　 平成28年7月29日（金曜）から平成28年10月28日（金曜）<br />（２）第1回質疑受付<br />　　 平成28年7月29日（金曜）から平成28年8月10日（水曜）<br />（３）一次申込受付期間<br />　　 平成28年8月22日（月曜）から平成28年9月2日（金曜）<br />（４）第2回質疑受付<br />　　 平成28年9月5日（月曜）から平成28年9月14日（水曜）<br />（５）二次申込受付期間（一次申込を行った法人のみ二次申込可能）<br />　　 平成28年10月17日（月曜）から平成28年10月28日（金曜）</p>
-    <h2 id="midashi78527">様式</h2><p>様式はこちらです。</p><ul class="link-list">
-
-            <li class="doc-doc">
-              <a href="/life/support/carenet/shisetsu/img/03_H28kokuyuchi_shitsugisho_1st.doc">募集に関する質疑書【第1回質疑受付用】（Word形式：31KB）</a>
-              </li>
-            <li class="doc-xls">
-              <a href="/life/support/carenet/shisetsu/img/04_H28kokuyuchi_1st_entryform.xls">一次申込で使用する様式（Excel形式：131KB）</a>
-              </li>
-            <li class="doc-xls">
-              <a href="/life/support/carenet/shisetsu/img/05_H28kokuyuchi_2nd_entryform.xls">二次申込で使用する様式（Excel形式：286KB）</a>
-              </li>
-    </ul>
-&emsp;&emsp;※質疑書の受付はFaxのみとします。
-  
-    <h2 id="midashi82168">参考資料</h2><ul class="link-list">
-
-            <li class="doc-pdf">
-              <a href="/life/support/carenet/shisetsu/img/04_H28kokuyuuchi_kossi.pdf">介護施設整備に係る国有地活用策の内容（骨子）（PDF形式：1,822KB）</a>
-              </li>
-    </ul>
-    <h2 id="midashi25944">現地説明会（すでに終了しました）</h2><ul class="link-list">
-
-            <li class="doc-pdf">
-              <a href="/life/support/carenet/shisetsu/img/01_H28kokuyuuchi_genchi.pdf">平成28年度国有地を活用した介護施設整備事業者募集における現地説明会のご案内（PDF形式：166KB）</a>
+              <a href="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/28kokuyuuchi_boshu.html">平成28年度国有地を活用して介護保険施設等を整備する事業者の募集について</a>
               </li>
     </ul>
 
-<div class="getPdf">
-<p>一部のファイルをPDF形式で提供しています。PDFの閲覧にはAdobe System社の無償のソフトウェア「Adobe Reader」または「Adobe Acrobat Reader」 が必要です。下記のAdobe Readerダウンロードページなどから入手してください。</p>
-<ul class="link-list">
-<li class="doc-other"><a href="http://get.adobe.com/jp/reader/" title="Adobe Readerダウンロード" rel="external">Adobe Readerダウンロードページ（外部リンク）</a></li>
-</ul>
-</div>
 
 </div><!-- /contents -->
 <hr />
@@ -390,4 +350,4 @@ document.getElementById('contactLink').appendChild(elA);
 </div><!-- /wrapper -->
 </body>
 </html>
-<!-- Created: 2017/01/23 15:09:08.896 GMT+9 -->
+<!-- Created: 2017/01/23 15:09:05.657 GMT+9 -->
