--- a/www.city.kobe.lg.jp/life/support/carenet/shisetsu/index.html
+++ b/www.city.kobe.lg.jp/life/support/carenet/shisetsu/index.html
@@ -238,7 +238,7 @@
                    layout="button_count"></div>
               </div>
           </div>
-        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2016年12月27日</dd></dl>
+        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2017年1月26日</dd></dl>
     <ul class="link-list">
 
             <li>
@@ -294,25 +294,7 @@
     <h2 id="midashi36933">選考結果</h2><ul class="link-list">
 
             <li>
-              <a href="/life/support/carenet/shisetsu/h28_1st_kaigohoken_senkoukekka.html">平成28年度第1回介護保険施設等の整備事業者募集の選考結果について</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/28kaigohoken_senkoukekka.html">（平成27年度選考実施分）平成28年度介護保険施設等の整備事業者の選考結果について</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/27GH_yuryou_senkoukekka.html">平成27年度認知症高齢者グループホーム及び介護付有料老人ホームの整備を行う事業者の選考結果について</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/27kaigohoken_senkoukekka.html">平成27年度介護保険施設等の整備事業者の選考結果について</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/26GH_yuryou_senkoukekka.html">平成26年度認知症高齢者グループホーム及び介護付有料老人ホームの整備を行う事業者の選考結果について</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/26saiboshuu_senkoukekka.html">平成26年度介護保険施設等の整備事業者の選考結果について（再募集、月が丘）</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/26kaigohoken_senkoukekka.html">平成26年度介護保険施設等の整備事業者の選考結果について</a>
+              <a href="/life/support/carenet/shisetsu/jigyoshaboshu.html#midashi36933">過去に実施した介護保険施設等の整備事業者募集の選考結果はこちら</a>
               </li>
     </ul>
     <h2 id="midashi66140">各種施設の食費・居住費</h2><p>介護保険施設の食費・居住費(利用者負担額)は、国のガイドラインに従い、各施設ごとのサービス内容や設備の違いなどを反映して設定されています。</p><ul class="link-list">
@@ -444,4 +426,4 @@ document.getElementById('contactLink').appendChild(elA);
 </div><!-- /wrapper -->
 </body>
 </html>
-<!-- Created: 2016/12/28 10:57:19.860 GMT+9 -->
+<!-- Created: 2017/01/23 15:09:08.199 GMT+9 -->
