--- a/www.city.kobe.lg.jp/life/support/carenet/shisetsu/jigyoshaboshu.html
+++ b/www.city.kobe.lg.jp/life/support/carenet/shisetsu/jigyoshaboshu.html
@@ -239,14 +239,16 @@
                    layout="button_count"></div>
               </div>
           </div>
-        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2016年12月2日</dd></dl><p>介護保険施設等の整備事業者募集について、募集要項へのリンク等を掲載しています。</p>
+        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2017年1月26日</dd></dl><p>介護保険施設等の整備事業者募集について、募集要項へのリンク等を掲載しています。</p>
     <h2 id="midashi61731">現在実施中の募集について</h2><ul class="link-list">
 
             <li>
               <a href="/life/support/carenet/shisetsu/tokuyou_kyougizoushou.html">既存特別養護老人ホームにおける協議増床制度について</a>
               </li>
     </ul>
-    <h2 id="midashi73633">今後実施予定の募集について</h2><p>決まり次第、お知らせします。</p>
+    <h2 id="midashi73633">今後実施予定の募集について</h2>
+<u>平成29年4月募集予定</u><br />特別養護老人ホーム（広域型・地域密着型）、介護老人保健施設、介護型ケアハウス、（看護）小規模多機能型居宅介護事業所<br /><br /><u>平成29年10月募集予定</u><br />特別養護老人ホーム（広域型・地域密着型）、介護老人保健施設、介護型ケアハウス、（看護）小規模多機能型居宅介護事業所、認知症高齢者グループホーム、介護付有料老人ホーム<br /><br />※募集時期は多少前後する場合がございます。<br />※募集内容については決まり次第、神戸ケアネット内「臨時のお知らせ」及び本ページ内にてお知らせいたします。
+  
     <h2 id="midashi89101">受付（または申込）を終了した募集について（参考）</h2><p>※既に受付（または申込）を終了した募集について、参考として掲載しています。</p><ul class="link-list">
 
             <li>
@@ -267,6 +269,9 @@
     </ul>
     <h2 id="midashi36933">選考結果</h2><ul class="link-list">
 
+            <li>
+              <a href="/life/support/carenet/shisetsu/28kokuyuuchi_kekka.html">平成28年度国有地を活用して介護施設を整備する事業者募集の選考結果について</a>
+              </li>
             <li>
               <a href="/life/support/carenet/shisetsu/h28_1st_kaigohoken_senkoukekka.html">平成28年度第1回介護保険施設等の整備事業者募集の選考結果について</a>
               </li>
@@ -386,4 +391,4 @@ document.getElementById('contactLink').appendChild(elA);
 </div><!-- /wrapper -->
 </body>
 </html>
-<!-- Created: 2016/12/02 17:54:33.809 GMT+9 -->
+<!-- Created: 2017/01/23 15:09:05.344 GMT+9 -->
