--- a/www.city.kobe.lg.jp/life/support/carenet/shisetsu/2904jigyoushaboshu.html
+++ b/www.city.kobe.lg.jp/life/support/carenet/shisetsu/2904jigyoushaboshu.html
@@ -14,7 +14,7 @@
 <meta name="format-detection" content="telephone=no" />
 
 <meta name="robots" content="ALL" /><meta name="keywords"
-    content="事業者　募集　介護保険等　施設" />
+    content="29年度　介護保険　事業者募集　特養　老健　ケアハウス　小規模多機能　看護小規模多機能　第1回" />
 <script type="text/javascript" src="/js/common.js"></script> 
 
 <!-- 音声関連 ここから --> 
@@ -37,12 +37,13 @@
   ga('send', 'pageview');
 
 </script>
-<title>神戸市：介護保険施設等の整備事業者募集について </title>
-<meta property="og:title" content="神戸市：介護保険施設等の整備事業者募集について" />
+<title>神戸市：平成29年度第1回介護保険施設等整備事業者募集について </title>
+<meta property="og:title"
+      content="神戸市：平成29年度第1回介護保険施設等整備事業者募集について" />
 <meta property="og:type" content="article" />
 
 <meta property="og:url"
-      content="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/jigyoshaboshu.html" />
+      content="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/2904jigyoushaboshu.html" />
 <meta property="og:image" content="http://www.city.kobe.lg.jp/img/sns.gif" />
 <meta property="og:site_name" content="神戸市ホームページ" />
 <meta property="og:locale" content="ja_JP" />
@@ -219,88 +220,62 @@
     href="/life/index.html">くらし・手続き</a> ＞ <a
     href="/life/support/index.html">年金・保険・税</a> ＞ <a
     href="/life/support/carenet/index.html">介護保険</a> ＞ <a
-    href="/life/support/carenet/shisetsu/index.html">神戸市内の介護サービス施設一覧</a> ＞ 介護保険施設等の整備事業者募集について</p><hr />
+    href="/life/support/carenet/shisetsu/index.html">神戸市内の介護サービス施設一覧</a> ＞ 平成29年度第1回介護保険施設等整備事業者について</p><hr />
 <div id="container">
 <div id="contents">
 
-    <h1 id="midashitop">介護保険施設等の整備事業者募集について</h1>
+    <h1 id="midashitop">平成29年度第1回介護保険施設等整備事業者募集について</h1>
     <div class="btnSocialBox">
             <div class="btnSocialInnerBox">
               <span>
                   <a href="https://twitter.com/share"
                      class="twitter-share-button"
-                     data-url="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/jigyoshaboshu.html"
-                     data-text="神戸市：介護保険施設等の整備事業者募集について"
+                     data-url="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/2904jigyoushaboshu.html"
+                     data-text="神戸市：平成29年度第1回介護保険施設等整備事業者募集について"
                      data-lang="ja">ツイート</a>
                   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                 </span>
               <div class="fb-share-button"
-                   href="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/jigyoshaboshu.html"
+                   href="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/2904jigyoushaboshu.html"
                    layout="button_count"></div>
               </div>
           </div>
-        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2017年4月28日</dd></dl><p>介護保険施設等の整備事業者募集について、募集要項へのリンク等を掲載しています。</p>
-    <h2 id="midashi61731">現在実施中の募集について</h2><ul class="link-list">
+        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2017年4月28日</dd></dl><p>平成29年度第1回介護保険施設等整備事業者募集を次の通り実施します。</p>
+    <h2 id="midashi16903">平成29年度第1回介護保険施設等整備事業者募集</h2>
+    <h3 id="midashi69601">募集要項はこちら</h3><ul class="link-list">
 
-            <li>
-              <a href="/life/support/carenet/shisetsu/2904jigyoushaboshu.html">平成29年度第1回介護保険施設等整備事業者募集について</a>
+            <li class="doc-pdf">
+              <a href="/life/support/carenet/shisetsu/img/01_H29_1_youkou_main.pdf">平成29年度第1回介護保険施設等整備事業者募集要項（本編）（PDF形式：427KB）</a>
               </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/tokuyou_kyougizoushou.html">既存特別養護老人ホームにおける協議増床制度について</a>
+            <li class="doc-pdf">
+              <a href="/life/support/carenet/shisetsu/img/02_H29_1_youkou_data.pdf">平成29年度第1回介護保険施設等整備事業者募集要項（資料編）（PDF形式：919KB）</a>
               </li>
     </ul>
-    <h2 id="midashi73633">今後実施予定の募集について</h2>
-<u>平成29年10月募集予定</u><br />特別養護老人ホーム（広域型・地域密着型）、介護老人保健施設、介護型ケアハウス、（看護）小規模多機能型居宅介護事業所、認知症高齢者グループホーム、介護付有料老人ホーム<br /><br />※募集時期は多少前後する場合がございます。<br />※募集内容については決まり次第、神戸ケアネット内「臨時のお知らせ」及び本ページ内にてお知らせいたします。
+    <h3 id="midashi8155">様式はこちら</h3><ul class="link-list">
+
+            <li class="doc-xls">
+              <a href="/life/support/carenet/shisetsu/img/03_H29_1_format.xls">表紙・添付書類（Excel形式：439KB）</a>
+              </li>
+            <li class="doc-doc">
+              <a href="/life/support/carenet/shisetsu/img/04_H29_1_format_prospectus.docx">添付書類（趣意書）（Word形式：27KB）</a>
+              </li>
+            <li>
+              ※添付書類のチェックリストは募集要項（資料編）に含まれています。
+              </li>
+            <li>
+              ※応募の際は、趣意書も忘れずに提出してください。
+              </li>
+    </ul>
+    <h2 id="midashi82121">その他</h2>
+<ul><li>既存特別養護老人ホームにおける協議による増床を受け付けています。詳細については、こちらをご覧ください。</li><lo><a href="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/tokuyou_kyougizoushou.html">既存特別養護老人ホームにおける協議増床制度について </a></lo></ul>
   
-    <h2 id="midashi89101">受付（または申込）を終了した募集について（参考）</h2><p>※既に受付（または申込）を終了した募集について、参考として掲載しています。</p><ul class="link-list">
 
-            <li>
-              <a href="/life/support/carenet/shisetsu/2810jigyoushaboshu.html">平成28年度第2回介護保険施設等整備事業者募集について</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/2810jigyoushaboshu.html">平成28年度認知症高齢者グループホーム整備事業者募集について</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/2810jigyoushaboshu.html">平成28年度介護付有料老人ホーム整備事業者募集について</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/28kokuyuuchi_boshu.html">平成28年度国有地を活用して介護保険施設等を整備する事業者の募集について</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/2804jigyoushaboshu.html">平成28年度第1回介護保険施設等整備事業者募集について</a>
-              </li>
-    </ul>
-    <h2 id="midashi36933">選考結果</h2><ul class="link-list">
-
-            <li>
-              <a href="/life/support/carenet/shisetsu/h28_2nd_kaigohoken_senkoukekka.html">平成28年度第2回介護保険施設等整備事業者募集の選考結果について</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/28kokuyuuchi_kekka.html">平成28年度国有地を活用して介護施設を整備する事業者募集の選考結果について</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/h28_1st_kaigohoken_senkoukekka.html">平成28年度第1回介護保険施設等の整備事業者募集の選考結果について</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/28kaigohoken_senkoukekka.html">（平成27年度選考実施分）平成28年度介護保険施設等の整備事業者の選考結果について</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/27GH_yuryou_senkoukekka.html">平成27年度認知症高齢者グループホーム及び介護付有料老人ホームの整備を行う事業者の選考結果について</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/27kaigohoken_senkoukekka.html">平成27年度介護保険施設等の整備事業者の選考結果について</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/26GH_yuryou_senkoukekka.html">平成26年度認知症高齢者グループホーム及び介護付有料老人ホームの整備を行う事業者の選考結果について</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/26saiboshuu_senkoukekka.html">平成26年度介護保険施設等の整備事業者の選考結果について（再募集、月が丘）</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/26kaigohoken_senkoukekka.html">平成26年度介護保険施設等の整備事業者の選考結果について</a>
-              </li>
-    </ul>
-
+<div class="getPdf">
+<p>一部のファイルをPDF形式で提供しています。PDFの閲覧にはAdobe System社の無償のソフトウェア「Adobe Reader」または「Adobe Acrobat Reader」 が必要です。下記のAdobe Readerダウンロードページなどから入手してください。</p>
+<ul class="link-list">
+<li class="doc-other"><a href="http://get.adobe.com/jp/reader/" title="Adobe Readerダウンロード" rel="external">Adobe Readerダウンロードページ（外部リンク）</a></li>
+</ul>
+</div>
 
 </div><!-- /contents -->
 <hr />
@@ -397,4 +372,4 @@ document.getElementById('contactLink').appendChild(elA);
 </div><!-- /wrapper -->
 </body>
 </html>
-<!-- Created: 2017/04/28 15:18:57.147 GMT+9 -->
+<!-- Created: 2017/04/28 15:18:57.551 GMT+9 -->
