--- a/www.city.kobe.lg.jp/life/support/carenet/shisetsu/2904jigyoushaboshu.html
+++ b/www.city.kobe.lg.jp/life/support/carenet/shisetsu/2904jigyoushaboshu.html
@@ -240,7 +240,7 @@
                    layout="button_count"></div>
               </div>
           </div>
-        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2017年4月28日</dd></dl><p>平成29年度第1回介護保険施設等整備事業者募集を次の通り実施します。</p>
+        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2017年6月9日</dd></dl><p>平成29年度第1回介護保険施設等整備事業者募集を次の通り実施します。<br />（募集の受付期間は終了しました。）</p>
     <h2 id="midashi16903">平成29年度第1回介護保険施設等整備事業者募集</h2>
     <h3 id="midashi69601">募集要項はこちら</h3><ul class="link-list">
 
@@ -372,4 +372,4 @@ document.getElementById('contactLink').appendChild(elA);
 </div><!-- /wrapper -->
 </body>
 </html>
-<!-- Created: 2017/04/28 15:18:57.551 GMT+9 -->
+<!-- Created: 2017/06/22 16:15:35.798 GMT+9 -->
