--- a/www.city.kobe.lg.jp/life/support/carenet/shisetsu/h29_1st_kaigohoken_senkoukekka.html
+++ b/www.city.kobe.lg.jp/life/support/carenet/shisetsu/h29_1st_kaigohoken_senkoukekka.html
@@ -13,8 +13,7 @@
 
 <meta name="format-detection" content="telephone=no" />
 
-<meta name="robots" content="ALL" /><meta name="keywords"
-    content="事業者　募集　介護保険等　施設" />
+<meta name="robots" content="ALL" />
 <script type="text/javascript" src="/js/common.js"></script> 
 
 <!-- 音声関連 ここから --> 
@@ -37,12 +36,13 @@
   ga('send', 'pageview');
 
 </script>
-<title>神戸市：介護保険施設等の整備事業者募集について </title>
-<meta property="og:title" content="神戸市：介護保険施設等の整備事業者募集について" />
+<title>神戸市：平成29年度第1回介護保険施設等事業者募集の選考結果について </title>
+<meta property="og:title"
+      content="神戸市：平成29年度第1回介護保険施設等事業者募集の選考結果について" />
 <meta property="og:type" content="article" />
 
 <meta property="og:url"
-      content="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/jigyoshaboshu.html" />
+      content="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/h29_1st_kaigohoken_senkoukekka.html" />
 <meta property="og:image" content="http://www.city.kobe.lg.jp/img/sns.gif" />
 <meta property="og:site_name" content="神戸市ホームページ" />
 <meta property="og:locale" content="ja_JP" />
@@ -219,90 +219,32 @@
     href="/life/index.html">くらし・手続き</a> ＞ <a
     href="/life/support/index.html">年金・保険・税</a> ＞ <a
     href="/life/support/carenet/index.html">介護保険</a> ＞ <a
-    href="/life/support/carenet/shisetsu/index.html">神戸市内の介護サービス施設一覧</a> ＞ 介護保険施設等の整備事業者募集について</p><hr />
+    href="/life/support/carenet/shisetsu/index.html">神戸市内の介護サービス施設一覧</a> ＞ 平成29年度第1回介護保険施設等事業者募集の選考結果について</p><hr />
 <div id="container">
 <div id="contents">
 
-    <h1 id="midashitop">介護保険施設等の整備事業者募集について</h1>
+    <h1 id="midashitop">平成29年度第1回介護保険施設等整備事業者募集の選考結果について</h1>
     <div class="btnSocialBox">
             <div class="btnSocialInnerBox">
               <span>
                   <a href="https://twitter.com/share"
                      class="twitter-share-button"
-                     data-url="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/jigyoshaboshu.html"
-                     data-text="神戸市：介護保険施設等の整備事業者募集について"
+                     data-url="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/h29_1st_kaigohoken_senkoukekka.html"
+                     data-text="神戸市：平成29年度第1回介護保険施設等事業者募集の選考結果について"
                      data-lang="ja">ツイート</a>
                   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                 </span>
               <div class="fb-share-button"
-                   href="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/jigyoshaboshu.html"
+                   href="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/h29_1st_kaigohoken_senkoukekka.html"
                    layout="button_count"></div>
               </div>
           </div>
-        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2017年9月16日</dd></dl><p>介護保険施設等の整備事業者募集について、募集要項へのリンク等を掲載しています。</p>
-    <h2 id="midashi61731">現在実施中の募集について</h2><ul class="link-list">
-
-            <li>
-              <a href="/life/support/carenet/shisetsu/tokuyou_kyougizoushou.html">既存特別養護老人ホームにおける協議増床制度について</a>
-              </li>
-    </ul>
-    <h2 id="midashi73633">今後実施予定の募集について</h2>
-<u>平成29年10月募集予定</u><br />特別養護老人ホーム（広域型・地域密着型）、介護老人保健施設、介護型ケアハウス、（看護）小規模多機能型居宅介護事業所、認知症高齢者グループホーム、介護付有料老人ホーム<br /><br />※募集時期は多少前後する場合がございます。<br />※募集内容については決まり次第、神戸ケアネット内「臨時のお知らせ」及び本ページ内にてお知らせいたします。
+        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2017年9月16日</dd></dl>
+    <h2 id="midashi75581">採択事業者</h2><p>選考事業者はありませんでした。</p>
+    <h3 id="midashi11222">１．特別養護老人ホーム</h3><p>選考事業者なし</p>
+    <h2 id="midashi52187">応募総数</h2>
+<table><tbody><tr><td>1.</td><td>特別養護老人ホーム</td><td>1事業</td></tr><tr><td>2.</td><td>介護老人保健施設</td><td>応募なし</td></tr><tr><td>3.</td><td>介護型ケアハウス</td><td>応募なし</td></tr><tr><td>4.</td><td>小規模多機能型居宅介護事業所</td><td>応募なし</td></tr><tr><td>5.</td><td>看護小規模多機能型居宅介護事業所</td><td>応募なし</td></tr></tbody></table>
   
-    <h2 id="midashi89101">受付（または申込）を終了した募集について（参考）</h2><p>※既に受付（または申込）を終了した募集について、参考として掲載しています。</p><ul class="link-list">
-
-            <li>
-              <a href="/life/support/carenet/shisetsu/2904jigyoushaboshu.html">平成29年度第1回介護保険施設等整備事業者募集について</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/2810jigyoushaboshu.html">平成28年度第2回介護保険施設等整備事業者募集について</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/2810jigyoushaboshu.html">平成28年度認知症高齢者グループホーム整備事業者募集について</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/2810jigyoushaboshu.html">平成28年度介護付有料老人ホーム整備事業者募集について</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/28kokuyuuchi_boshu.html">平成28年度国有地を活用して介護保険施設等を整備する事業者の募集について</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/2804jigyoushaboshu.html">平成28年度第1回介護保険施設等整備事業者募集について</a>
-              </li>
-    </ul>
-    <h2 id="midashi36933">選考結果</h2><ul class="link-list">
-
-            <li>
-              <a href="/life/support/carenet/shisetsu/h29_1st_kaigohoken_senkoukekka.html">平成29年度第1回介護保険施設等整備事業者募集の選考結果について</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/h28_2nd_kaigohoken_senkoukekka.html">平成28年度第2回介護保険施設等整備事業者募集の選考結果について</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/28kokuyuuchi_kekka.html">平成28年度国有地を活用して介護施設を整備する事業者募集の選考結果について</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/h28_1st_kaigohoken_senkoukekka.html">平成28年度第1回介護保険施設等の整備事業者募集の選考結果について</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/28kaigohoken_senkoukekka.html">（平成27年度選考実施分）平成28年度介護保険施設等の整備事業者の選考結果について</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/27GH_yuryou_senkoukekka.html">平成27年度認知症高齢者グループホーム及び介護付有料老人ホームの整備を行う事業者の選考結果について</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/27kaigohoken_senkoukekka.html">平成27年度介護保険施設等の整備事業者の選考結果について</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/26GH_yuryou_senkoukekka.html">平成26年度認知症高齢者グループホーム及び介護付有料老人ホームの整備を行う事業者の選考結果について</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/26saiboshuu_senkoukekka.html">平成26年度介護保険施設等の整備事業者の選考結果について（再募集、月が丘）</a>
-              </li>
-            <li>
-              <a href="/life/support/carenet/shisetsu/26kaigohoken_senkoukekka.html">平成26年度介護保険施設等の整備事業者の選考結果について</a>
-              </li>
-    </ul>
 
 
 </div><!-- /contents -->
@@ -400,4 +342,4 @@ document.getElementById('contactLink').appendChild(elA);
 </div><!-- /wrapper -->
 </body>
 </html>
-<!-- Created: 2017/09/14 08:53:34.920 GMT+9 -->
+<!-- Created: 2017/09/14 08:53:35.242 GMT+9 -->
