--- a/www.city.kobe.lg.jp/child/grow/nursery/ninkagai/sisetu.html
+++ b/www.city.kobe.lg.jp/child/grow/nursery/ninkagai/sisetu.html
@@ -315,11 +315,11 @@
     神戸市 こども家庭局 子育て支援部　事業課</dt>
 <dd><address>
   〒650-8570 神戸市中央区加納町6-5-1 神戸市役所1号館3階
-  <a href="http://www.ssl.city.kobe.lg.jp/map/shisetsumap.html?address=%90_%8c%cb%8es%96%f0%8f%8a">市役所への道順・地図</a>
+  <a href="https://goo.gl/maps/1AyoBsqAev92">市役所への道順・地図</a>
   <br />
   電話：078-322-6849  Fax：078-322-6897
   <span class="contactLink" id="contactLink">
-    <a href="https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFtLcE5VcEpXcFtLcElKcFRwXnBIcFxwUnBNcFhwXnApcFhwT3BPcFJwTHBOb3RwTHBScF1wYm90cFRwWHBLcE5vdHBVcFBvdHBTcFk%3D&busyo_name=cHlLcEhVcEp1cVdLcEl3cFxvZnBrcSBwa3FTcGtxbHBycVJwe3F3cHRxU29mcHdwWnBxcXNwa3FQcHdwYXBycHBxIXB9b2Zwd3EicHRxUnBycWc%3D&lang=ja&ssi_code=K1026200600000-0000&title=">このページの内容についてメールで問い合わせする</a></span>
+    <a href="https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFtncE5PcHBXcFtOcFRKcFRwXnBIcFxwUnBNcFhwXnApcFhwT3BPcFJwTHBOb3RwTHBScF1wYm90cFRwWHBLcE5vdHBVcFBvdHBTcFk%3D&busyo_name=cHkmcEhBcDd1cVcrcFB3cFxvZnBrcSBwa3FTcGtxbHBycVJwe3F3cHRxU29mcHdwWnBxcXNwa3FQcHdwYXBycHBxIXB9b2Zwd3EicHRxUnBycWc%3D&lang=ja&ssi_code=K1026200600000-0000&title=">このページの内容についてメールで問い合わせする</a></span>
 <script type="text/javascript">
 var elContainer = document.getElementById("contactLink"); 
  while(elContainer.firstChild) { 
@@ -327,7 +327,7 @@ var elContainer = document.getElementById("contactLink");
  } 
 text = document.createTextNode('このページの内容についてメールで問い合わせする'); 
 elA = document.createElement('a'); 
-elA.href = 'https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFtLcE5VcEpXcFtLcElKcFRwXnBIcFxwUnBNcFhwXnApcFhwT3BPcFJwTHBOb3RwTHBScF1wYm90cFRwWHBLcE5vdHBVcFBvdHBTcFk%3D&busyo_name=cHlLcEhVcEp1cVdLcEl3cFxvZnBrcSBwa3FTcGtxbHBycVJwe3F3cHRxU29mcHdwWnBxcXNwa3FQcHdwYXBycHBxIXB9b2Zwd3EicHRxUnBycWc%3D&lang=ja&ssi_code=K1026200600000-0000&title=' + document.title; 
+elA.href = 'https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFtncE5PcHBXcFtOcFRKcFRwXnBIcFxwUnBNcFhwXnApcFhwT3BPcFJwTHBOb3RwTHBScF1wYm90cFRwWHBLcE5vdHBVcFBvdHBTcFk%3D&busyo_name=cHkmcEhBcDd1cVcrcFB3cFxvZnBrcSBwa3FTcGtxbHBycVJwe3F3cHRxU29mcHdwWnBxcXNwa3FQcHdwYXBycHBxIXB9b2Zwd3EicHRxUnBycWc%3D&lang=ja&ssi_code=K1026200600000-0000&title=' + document.title; 
 elA.appendChild(text); 
 document.getElementById('contactLink').appendChild(elA); 
 </script>
@@ -335,7 +335,7 @@ document.getElementById('contactLink').appendChild(elA);
   
 </address> </dd>
 
-<dd><address><a href="http://www.kobe-call3330.jp">市政やくらし、イベント情報などのお問い合わせは、神戸市総合コールセンターまで。</a><br />電話：078-333-3330 Fax：078-333-3314</address></dd>
+<dd><address>市政、くらし、各種申請手続でわからないことは<a href="http://www.kobe-call3330.jp">神戸市総合コールセンター</a>へ<br />電話：078-333-3330 Fax：078-333-3314</address></dd>
 </dl>
 </div>
 <hr />
@@ -348,7 +348,7 @@ document.getElementById('contactLink').appendChild(elA);
 <div id="copyright">Copyright <abbr title="Copyright">&copy;</abbr> City of Kobe. All rights reserved.</div>
 
 </div><!-- /footer -->
-<!-- Created: 2016/12/19 16:13:33.449 GMT+9 -->
+<!-- Created: 2017/10/03 14:22:09.799 GMT+9 -->
 
 </div><!-- /wrapper -->
 </body>
