--- a/www.city.kobe.lg.jp/life/support/carenet/shisetsu/shokibo.html
+++ b/www.city.kobe.lg.jp/life/support/carenet/shisetsu/shokibo.html
@@ -356,11 +356,11 @@
     神戸市 保健福祉局 高齢福祉部 高齢福祉課 施設整備係</dt>
 <dd><address>
   〒650-8570 神戸市中央区加納町6-5-1 神戸市役所1号館4階
-  <a href="http://www.ssl.city.kobe.lg.jp/map/shisetsumap.html?address=%90_%8c%cb%8es%96%f0%8f%8a">市役所への道順・地図</a>
+  <a href="https://goo.gl/maps/1AyoBsqAev92">市役所への道順・地図</a>
   <br />
   電話：078-322-5226  Fax：078-322-6046
   <span class="contactLink" id="contactLink">
-    <a href="https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFROcFhpcDtecFt0cDVOcFJwKXBYcE9wT3BScExwTm90cExwUnBdcGJvdHBUcFhwS3BOb3RwVXBQb3RwU3BZ&busyo_name=cHkhcEh6cD91cVcjcDl3cFxvZnEhcWdwdXB7cSFxK3B3cGxwdHFTb2ZwdnBrcSNxenEhcStwd3BscSFwfW9mcHZwa3EjcXpxIXErcHdwbHBycWdvZnB3cGRweXFpcHlxOnB9ciRwdXBA&lang=ja&ssi_code=K1015400150000-0002&title=">このページの内容についてメールで問い合わせする</a></span>
+    <a href="https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFQicFgpcENecFtVcFZOcFJwKXBYcE9wT3BScExwTm90cExwUnBdcGJvdHBUcFhwS3BOb3RwVXBQb3RwU3BZ&busyo_name=cHk6cEhIcFV1cVckcHV3cFxvZnEhcWdwdXB7cSFxK3B3cGxwdHFTb2ZwdnBrcSNxenEhcStwd3BscSFwfW9mcHZwa3EjcXpxIXErcHdwbHBycWdvZnB3cGRweXFpcHlxOnB9ciRwdXBA&lang=ja&ssi_code=K1015400150000-0002&title=">このページの内容についてメールで問い合わせする</a></span>
 <script type="text/javascript">
 var elContainer = document.getElementById("contactLink"); 
  while(elContainer.firstChild) { 
@@ -368,7 +368,7 @@ var elContainer = document.getElementById("contactLink");
  } 
 text = document.createTextNode('このページの内容についてメールで問い合わせする'); 
 elA = document.createElement('a'); 
-elA.href = 'https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFROcFhpcDtecFt0cDVOcFJwKXBYcE9wT3BScExwTm90cExwUnBdcGJvdHBUcFhwS3BOb3RwVXBQb3RwU3BZ&busyo_name=cHkhcEh6cD91cVcjcDl3cFxvZnEhcWdwdXB7cSFxK3B3cGxwdHFTb2ZwdnBrcSNxenEhcStwd3BscSFwfW9mcHZwa3EjcXpxIXErcHdwbHBycWdvZnB3cGRweXFpcHlxOnB9ciRwdXBA&lang=ja&ssi_code=K1015400150000-0002&title=' + document.title; 
+elA.href = 'https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFQicFgpcENecFtVcFZOcFJwKXBYcE9wT3BScExwTm90cExwUnBdcGJvdHBUcFhwS3BOb3RwVXBQb3RwU3BZ&busyo_name=cHk6cEhIcFV1cVckcHV3cFxvZnEhcWdwdXB7cSFxK3B3cGxwdHFTb2ZwdnBrcSNxenEhcStwd3BscSFwfW9mcHZwa3EjcXpxIXErcHdwbHBycWdvZnB3cGRweXFpcHlxOnB9ciRwdXBA&lang=ja&ssi_code=K1015400150000-0002&title=' + document.title; 
 elA.appendChild(text); 
 document.getElementById('contactLink').appendChild(elA); 
 </script>
@@ -376,7 +376,7 @@ document.getElementById('contactLink').appendChild(elA);
   
 </address> </dd>
 
-<dd><address><a href="http://www.kobe-call3330.jp">市政やくらし、イベント情報などのお問い合わせは、神戸市総合コールセンターまで。</a><br />電話：078-333-3330 Fax：078-333-3314</address></dd>
+<dd><address>市政、くらし、各種申請手続でわからないことは<a href="http://www.kobe-call3330.jp">神戸市総合コールセンター</a>へ<br />電話：078-333-3330 Fax：078-333-3314</address></dd>
 </dl>
 </div>
 <hr />
@@ -389,7 +389,7 @@ document.getElementById('contactLink').appendChild(elA);
 <div id="copyright">Copyright <abbr title="Copyright">&copy;</abbr> City of Kobe. All rights reserved.</div>
 
 </div><!-- /footer -->
-<!-- Created: 2016/12/19 16:10:59.815 GMT+9 -->
+<!-- Created: 2017/10/03 14:19:01.338 GMT+9 -->
 
 </div><!-- /wrapper -->
 </body>
