--- a/www.city.kobe.lg.jp/life/support/carenet/shisetsu/teikijunkai.html
+++ b/www.city.kobe.lg.jp/life/support/carenet/shisetsu/teikijunkai.html
@@ -313,11 +313,11 @@
     神戸市 保健福祉局 高齢福祉部 介護保険課 管理係</dt>
 <dd><address>
   〒650-8570 神戸市中央区加納町6-5-1 神戸市役所1号館4階
-  <a href="http://www.ssl.city.kobe.lg.jp/map/shisetsumap.html?address=%90_%8c%cb%8es%96%f0%8f%8a">市役所への道順・地図</a>
+  <a href="https://goo.gl/maps/1AyoBsqAev92">市役所への道順・地図</a>
   <br />
   電話：078-322-6229  Fax：078-322-6049
   <span class="contactLink" id="contactLink">
-    <a href="https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFRRcFg%2BcE5LcE5KcFFUcEpwUnBQcFhwUXBYcFRwTnBXcFRwSnApcFhwT3BPcFJwTHBOb3RwTHBScF1wYm90cFRwWHBLcE5vdHBVcFBvdHBTcFk%3D&busyo_name=cHlgcEh7cG91cVc4cFp3cFxvZnEhcWdwdXB7cSFxK3B3cGxwdHFTb2ZwdnBrcSNxenEhcStwd3BscSFwfW9mcHJxenB1cXhxIXFncHVxO3BycWdvZnBzcVNxI3EpcHVwQA%3D%3D&lang=ja&ssi_code=K1015400350000-0004&title=">このページの内容についてメールで問い合わせする</a></span>
+    <a href="https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFQ3cFhvcGVLcE4ncD9UcEpwUnBQcFhwUXBYcFRwTnBXcFRwSnApcFhwT3BPcFJwTHBOb3RwTHBScF1wYm90cFRwWHBLcE5vdHBVcFBvdHBTcFk%3D&busyo_name=cHkqcEhFcEN1cVd6cHl3cFxvZnEhcWdwdXB7cSFxK3B3cGxwdHFTb2ZwdnBrcSNxenEhcStwd3BscSFwfW9mcHJxenB1cXhxIXFncHVxO3BycWdvZnBzcVNxI3EpcHVwQA%3D%3D&lang=ja&ssi_code=K1015400350000-0004&title=">このページの内容についてメールで問い合わせする</a></span>
 <script type="text/javascript">
 var elContainer = document.getElementById("contactLink"); 
  while(elContainer.firstChild) { 
@@ -325,7 +325,7 @@ var elContainer = document.getElementById("contactLink");
  } 
 text = document.createTextNode('このページの内容についてメールで問い合わせする'); 
 elA = document.createElement('a'); 
-elA.href = 'https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFRRcFg%2BcE5LcE5KcFFUcEpwUnBQcFhwUXBYcFRwTnBXcFRwSnApcFhwT3BPcFJwTHBOb3RwTHBScF1wYm90cFRwWHBLcE5vdHBVcFBvdHBTcFk%3D&busyo_name=cHlgcEh7cG91cVc4cFp3cFxvZnEhcWdwdXB7cSFxK3B3cGxwdHFTb2ZwdnBrcSNxenEhcStwd3BscSFwfW9mcHJxenB1cXhxIXFncHVxO3BycWdvZnBzcVNxI3EpcHVwQA%3D%3D&lang=ja&ssi_code=K1015400350000-0004&title=' + document.title; 
+elA.href = 'https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFQ3cFhvcGVLcE4ncD9UcEpwUnBQcFhwUXBYcFRwTnBXcFRwSnApcFhwT3BPcFJwTHBOb3RwTHBScF1wYm90cFRwWHBLcE5vdHBVcFBvdHBTcFk%3D&busyo_name=cHkqcEhFcEN1cVd6cHl3cFxvZnEhcWdwdXB7cSFxK3B3cGxwdHFTb2ZwdnBrcSNxenEhcStwd3BscSFwfW9mcHJxenB1cXhxIXFncHVxO3BycWdvZnBzcVNxI3EpcHVwQA%3D%3D&lang=ja&ssi_code=K1015400350000-0004&title=' + document.title; 
 elA.appendChild(text); 
 document.getElementById('contactLink').appendChild(elA); 
 </script>
@@ -333,7 +333,7 @@ document.getElementById('contactLink').appendChild(elA);
   
 </address> </dd>
 
-<dd><address><a href="http://www.kobe-call3330.jp">市政やくらし、イベント情報などのお問い合わせは、神戸市総合コールセンターまで。</a><br />電話：078-333-3330 Fax：078-333-3314</address></dd>
+<dd><address>市政、くらし、各種申請手続でわからないことは<a href="http://www.kobe-call3330.jp">神戸市総合コールセンター</a>へ<br />電話：078-333-3330 Fax：078-333-3314</address></dd>
 </dl>
 </div>
 <hr />
@@ -346,7 +346,7 @@ document.getElementById('contactLink').appendChild(elA);
 <div id="copyright">Copyright <abbr title="Copyright">&copy;</abbr> City of Kobe. All rights reserved.</div>
 
 </div><!-- /footer -->
-<!-- Created: 2016/12/19 16:11:34.227 GMT+9 -->
+<!-- Created: 2017/10/03 14:19:27.708 GMT+9 -->
 
 </div><!-- /wrapper -->
 </body>
