[carenet] sync with upstream

--- a/www.city.kobe.lg.jp/life/support/carenet/shisetsu/2910jigyoushaboshu.html
+++ b/www.city.kobe.lg.jp/life/support/carenet/shisetsu/2910jigyoushaboshu.html
@@ -13,7 +13,8 @@
 
 <meta name="format-detection" content="telephone=no" />
 
-<meta name="robots" content="ALL" />
+<meta name="robots" content="ALL" /><meta name="keywords"
+    content="29年度　介護保険　事業者募集　特養　老健　ケアハウス　小規模多機能　看護小規模多機能　特定施設　介護付有料老人ホーム　サービス付き高齢者向け住宅　第2回" />
 <script type="text/javascript" src="/js/common.js"></script> 
 
 <!-- 音声関連 ここから --> 
@@ -36,13 +37,13 @@
   ga('send', 'pageview');
 
 </script>
-<title>神戸市：平成27年度介護保険施設等の整備事業者の選考結果について </title>
+<title>神戸市：平成29年度第2回介護保険施設等整備事業者募集等について </title>
 <meta property="og:title"
-      content="神戸市：平成27年度介護保険施設等の整備事業者の選考結果について" />
+      content="神戸市：平成29年度第2回介護保険施設等整備事業者募集等について" />
 <meta property="og:type" content="article" />
 
 <meta property="og:url"
-      content="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/27kaigohoken_senkoukekka.html" />
+      content="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/2910jigyoushaboshu.html" />
 <meta property="og:image" content="http://www.city.kobe.lg.jp/img/sns.gif" />
 <meta property="og:site_name" content="神戸市ホームページ" />
 <meta property="og:locale" content="ja_JP" />
@@ -219,41 +220,102 @@
     href="/life/index.html">くらし・手続き</a> ＞ <a
     href="/life/support/index.html">年金・保険・税</a> ＞ <a
     href="/life/support/carenet/index.html">介護保険</a> ＞ <a
-    href="/life/support/carenet/shisetsu/index.html">神戸市内の介護サービス施設一覧</a> ＞ 平成27年度介護保険施設等の整備事業者の選考結果について</p><hr />
+    href="/life/support/carenet/shisetsu/index.html">神戸市内の介護サービス施設一覧</a> ＞ 平成29年度第2回介護保険施設等整備事業者募集等について</p><hr />
 <div id="container">
 <div id="contents">
 
-    <h1 id="midashitop">平成27年度介護保険施設等の整備事業者の選考結果について</h1>
+    <h1 id="midashitop">平成29年度第2回介護保険施設等・平成29年度認知症高齢者グループホーム整備事業者募集及び平成29年度特定施設入居者生活介護の指定を受ける有料老人ホーム又はサービス付き高齢者向け住宅事業者募集について</h1>
     <div class="btnSocialBox">
             <div class="btnSocialInnerBox">
               <span>
                   <a href="https://twitter.com/share"
                      class="twitter-share-button"
-                     data-url="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/27kaigohoken_senkoukekka.html"
-                     data-text="神戸市：平成27年度介護保険施設等の整備事業者の選考結果について"
+                     data-url="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/2910jigyoushaboshu.html"
+                     data-text="神戸市：平成29年度第2回介護保険施設等整備事業者募集等について"
                      data-lang="ja">ツイート</a>
                   <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
                 </span>
               <div class="fb-share-button"
-                   href="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/27kaigohoken_senkoukekka.html"
+                   href="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/2910jigyoushaboshu.html"
                    layout="button_count"></div>
               </div>
           </div>
-        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2015年4月6日</dd></dl>
-    <h2 id="midashi75581">採択事業者</h2><p>次に掲げる事業者が採択されました。</p>
-    <h4 id="midashi41014">1.特別養護老人ホーム</h4>
-<table><tbody><tr><td>事業者</td><td>整備場所</td><td>入所定員</td><td>整備区分</td></tr><tr><td>社会福祉法人甲有会</td><td>垂水区小束台868番37の一部</td><td>100</td><td>創設</td></tr><tr><td>社会福祉法人まなの会</td><td>北区鈴蘭台北町1丁目1番12他</td><td>30</td><td>創設</td></tr></tbody></table>
-  
-    <h4 id="midashi86140">２.介護型ケアハウス</h4>
-<table><tbody><tr><td>事業者</td><td>整備場所</td><td>入所定員</td><td>整備区分</td></tr><tr><td>社会福祉法人まなの会</td><td>北区鈴蘭台北町1丁目1番12他</td><td>30</td><td>創設</td></tr></tbody></table>
-  
-    <h4 id="midashi29485">３.市立ひよどり台ホームの建替え運営等（北区ひよどり北町）</h4>
-<table><tbody><tr><td>事業者</td><td>整備場所</td><td>入所定員</td><td>整備区分</td></tr><tr><td>社会福祉法人やすらぎ福祉会</td><td>北区ひよどり北町3丁目2番</td><td>100</td><td>創設</td></tr></tbody></table>※　介護型ケアハウス（定員80床）を併設する予定です。
-  
-    <h2 id="midashi52187">応募総数</h2>
-<table border="1" cellpadding="1" cellspacing="1" width="100%"><tbody><tr><td>1.</td><td>特別養護老人ホーム</td><td>5事業</td></tr><tr><td>2.</td><td>介護老人保健施設</td><td>応募なし</td></tr><tr><td>3.</td><td>介護型ケアハウス</td><td>2事業</td></tr><tr><td>4.</td><td>市立ひよどり台ホームの建替え運営等（北区ひよどり北町）</td><td>2事業</td></tr><tr><td>5.</td><td>小規模多機能型居宅介護拠点</td><td>応募なし</td></tr><tr><td>6.</td><td>看護小規模多機能型居宅介護(複合型サービス)</td><td>応募なし</td></tr></tbody></table>
+        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2017年10月10日</dd></dl><p>平成29年度第2回介護保険施設等・平成29年度認知症高齢者グループホーム整備事業者募集及び平成29年度特定施設入居者生活介護の指定を受ける有料老人ホーム又はサービス付き高齢者向け住宅事業者募集を次の通り実施します。</p>
+    <h2 id="midashi52582">１．介護保険施設等・認知症高齢者グループホーム</h2>
+    <h3 id="midashi69601">募集要項はこちら</h3><ul class="link-list">
+
+            <li class="doc-pdf">
+              <a href="/life/support/carenet/shisetsu/01_H29_2_youkou_main.pdf">平成29年度第2回介護保険施設等・平成29年度認知症高齢者グループホーム整備事業者募集要項（本編）（PDF形式：456KB）</a>
+              </li>
+            <li class="doc-pdf">
+              <a href="/life/support/carenet/shisetsu/02_H29_2_youkou_data.pdf">平成29年度第2回介護保険施設等・平成29年度認知症高齢者グループホーム整備事業者募集要項（資料編）（PDF形式：1,194KB）</a>
+              </li>
+    </ul>
+    <h3 id="midashi8155">様式はこちら</h3><ul class="link-list">
+
+            <li class="doc-xls">
+              <a href="/life/support/carenet/shisetsu/03_H29_2_format.xls">表紙・添付書類（Excel形式：510KB）</a>
+              </li>
+            <li class="doc-doc">
+              <a href="/life/support/carenet/shisetsu/04_H29_2_format_prospectus.docx">添付書類（趣意書）（Word形式：27KB）</a>
+              </li>
+            <li>
+              ※添付書類のチェックリストは募集要項（資料編）に含まれています。
+              </li>
+            <li>
+              ※応募の際は、趣意書も忘れずに提出してください。
+              </li>
+    </ul>
+    <h3 id="midashi16904">前回募集からの主な変更点</h3><ul class="link-list">
+
+            <li>
+              特別養護老人ホーム：今後の条例改正を前提に従来型個室・多床室の整備について、定員の3割を目安に提案を認めます。
+              </li>
+            <li>
+              認知症高齢者グループホーム：1箇所あたり3ユニットまで整備可能とします。
+              </li>
+    </ul>
+    <h2 id="midashi49030">２．特定施設入居者生活介護の指定を受ける有料老人ホーム又はサービス付き高齢者向け住宅</h2>
+    <h3 id="midashi69601">募集要項はこちら</h3><ul class="link-list">
+
+            <li class="doc-pdf">
+              <a href="/life/support/carenet/shisetsu/29kaigotsukiyuuryou_youkou.pdf">平成29年度特定施設入居者生活介護の指定を受ける有料老人ホーム又はサービス付き高齢者向け住宅事業者募集要項（PDF形式：698KB）</a>
+              </li>
+    </ul>
+    <h3 id="midashi8155">様式はこちら</h3><ul class="link-list">
+
+            <li class="doc-xls">
+              <a href="/life/support/carenet/shisetsu/29kaigotsukiyuuryou_format_1.xls">表紙・添付書類（Excel形式：292KB）</a>
+              </li>
+            <li class="doc-doc">
+              <a href="/life/support/carenet/shisetsu/29kaigotsukiyuuryou_format_2.docx">添付書類（趣意書）（Word形式：27KB）</a>
+              </li>
+            <li class="doc-doc">
+              <a href="/life/support/carenet/shisetsu/29kaigotsukiyuuryou_format_3.docx">重要事項説明書及び介護サービス一覧表様式（Word形式：66KB）</a>
+              </li>
+            <li>
+              ※添付書類のチェックリストは募集要項に含まれています。
+              </li>
+            <li>
+              ※応募の際は、書類の提出漏れにご注意ください。
+              </li>
+    </ul>
+    <h3 id="midashi16904">前回募集からの主な変更点</h3><ul class="link-list">
+
+            <li>
+              介護居室の整備上限（70床）を廃止し、介護居室のみでも100床まで整備可能とします。
+              </li>
+    </ul>
+    <h2 id="midashi82121">その他</h2>
+<ul><li>既存特別養護老人ホームにおける協議による増床を受け付けています。詳細については、こちらをご覧ください。</li><lo><a href="http://www.city.kobe.lg.jp/life/support/carenet/shisetsu/tokuyou_kyougizoushou.html">既存特別養護老人ホームにおける協議増床制度について </a></lo></ul>
   
 
+<div class="getPdf">
+<p>一部のファイルをPDF形式で提供しています。PDFの閲覧にはAdobe System社の無償のソフトウェア「Adobe Reader」または「Adobe Acrobat Reader」 が必要です。下記のAdobe Readerダウンロードページなどから入手してください。</p>
+<ul class="link-list">
+<li class="doc-other"><a href="http://get.adobe.com/jp/reader/" title="Adobe Readerダウンロード" rel="external">Adobe Readerダウンロードページ（外部リンク）</a></li>
+</ul>
+</div>
 
 </div><!-- /contents -->
 <hr />
@@ -350,4 +412,4 @@ document.getElementById('contactLink').appendChild(elA);
 </div><!-- /wrapper -->
 </body>
 </html>
-<!-- Created: 2016/02/03 13:12:32.796 GMT+9 -->
+<!-- Created: 2017/10/06 08:57:10.649 GMT+9 -->
