--- a/www.city.kobe.lg.jp/life/support/carenet/shisetsu/index.html
+++ b/www.city.kobe.lg.jp/life/support/carenet/shisetsu/index.html
@@ -238,7 +238,7 @@
                    layout="button_count"></div>
               </div>
           </div>
-        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2017年8月1日</dd></dl>
+        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2017年10月24日</dd></dl>
     <ul class="link-list">
 
             <li>
@@ -279,7 +279,7 @@
     <ul class="link-list">
 
             <li class="doc-pdf">
-              <a href="/life/support/carenet/shisetsu/kenikibetu.pdf">日常生活圏域別　事業所一覧（PDF形式：352KB）</a>
+              <a href="/life/support/carenet/shisetsu/kenikibetu.pdf">日常生活圏域別　事業所一覧（PDF形式：353KB）</a>
               </li>
     </ul>
     <h2 id="midashi64425">整備中・整備予定</h2><ul class="link-list">
@@ -300,21 +300,21 @@
     <h2 id="midashi66140">各種施設の食費・居住費</h2><p>介護保険施設の食費・居住費(利用者負担額)は、国のガイドラインに従い、各施設ごとのサービス内容や設備の違いなどを反映して設定されています。</p><ul class="link-list">
 
             <li class="doc-pdf">
-              <a href="/life/support/carenet/shisetsu/img/tokuyo.pdf">介護老人福祉施設（特別養護老人ホーム）（PDF形式：184KB）</a>
+              <a href="/life/support/carenet/shisetsu/tokuyo.pdf">介護老人福祉施設（特別養護老人ホーム）（PDF形式：186KB）</a>
               </li>
             <li class="doc-pdf">
-              <a href="/life/support/carenet/shisetsu/img/roken.pdf">介護老人保健施設（老人保健施設）（PDF形式：140KB）</a>
+              <a href="/life/support/carenet/shisetsu/roken.pdf">介護老人保健施設（老人保健施設）（PDF形式：140KB）</a>
               </li>
             <li class="doc-pdf">
-              <a href="/life/support/carenet/shisetsu/img/ryoyo.pdf">介護療養型医療施設（療養病床）（PDF形式：86KB）</a>
+              <a href="/life/support/carenet/shisetsu/ryoyo.pdf">介護療養型医療施設（療養病床）（PDF形式：86KB）</a>
               </li>
             <li class="doc-pdf">
-              <a href="/life/support/carenet/shisetsu/img/short.pdf">上記の施設以外で短期入所生活介護（ショートステイ）を実施している施設（PDF形式：74KB）</a>
+              <a href="/life/support/carenet/shisetsu/short.pdf">上記の施設以外で短期入所生活介護（ショートステイ）を実施している施設（PDF形式：79KB）</a>
               </li>
     </ul><p>低所得者層については、利用者負担の上限が定められています。詳細は、「神戸市の介護保険のあらまし」P38～39(「4.食費・居住費の軽減」)をご覧ください。</p><ul class="link-list">
 
             <li>
-              <a href="/life/support/carenet/pamphlet/2015aramasi.html">神戸市の介護保険のあらまし</a>
+              神戸市の介護保険のあらまし
               </li>
     </ul>
 <div class="relatedLinks">
@@ -392,7 +392,7 @@
   <br />
   電話：078-322-6228  Fax：078-322-6049
   <span class="contactLink" id="contactLink">
-    <a href="https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFQwcFhAcDxLcE41cFtUcEpwUnBQcFhwUXBYcFRwTnBXcFRwSnApcFhwT3BPcFJwTHBOb3RwTHBScF1wYm90cFRwWHBLcE5vdHBVcFBvdHBTcFk%3D&busyo_name=cHk3cEgncE11cVdocG13cFxvZnEhcWdwdXB7cSFxK3B3cGxwdHFTb2ZwdnBrcSNxenEhcStwd3BscSFwfW9mcHJxenB1cXhxIXFncHVxO3BycWc%3D&lang=ja&ssi_code=K1015400350000-0000&title=">このページの内容についてメールで問い合わせする</a></span>
+    <a href="https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFRIcFhlcHxLcE54cFtUcEpwUnBQcFhwUXBYcFRwTnBXcFRwSnApcFhwT3BPcFJwTHBOb3RwTHBScF1wYm90cFRwWHBLcE5vdHBVcFBvdHBTcFk%3D&busyo_name=cHlQcEg5cGN1cVclcE53cFxvZnEhcWdwdXB7cSFxK3B3cGxwdHFTb2ZwdnBrcSNxenEhcStwd3BscSFwfW9mcHJxenB1cXhxIXFncHVxO3BycWc%3D&lang=ja&ssi_code=K1015400350000-0000&title=">このページの内容についてメールで問い合わせする</a></span>
 <script type="text/javascript">
 var elContainer = document.getElementById("contactLink"); 
  while(elContainer.firstChild) { 
@@ -400,7 +400,7 @@ var elContainer = document.getElementById("contactLink");
  } 
 text = document.createTextNode('このページの内容についてメールで問い合わせする'); 
 elA = document.createElement('a'); 
-elA.href = 'https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFQwcFhAcDxLcE41cFtUcEpwUnBQcFhwUXBYcFRwTnBXcFRwSnApcFhwT3BPcFJwTHBOb3RwTHBScF1wYm90cFRwWHBLcE5vdHBVcFBvdHBTcFk%3D&busyo_name=cHk3cEgncE11cVdocG13cFxvZnEhcWdwdXB7cSFxK3B3cGxwdHFTb2ZwdnBrcSNxenEhcStwd3BscSFwfW9mcHJxenB1cXhxIXFncHVxO3BycWc%3D&lang=ja&ssi_code=K1015400350000-0000&title=' + document.title; 
+elA.href = 'https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFRIcFhlcHxLcE54cFtUcEpwUnBQcFhwUXBYcFRwTnBXcFRwSnApcFhwT3BPcFJwTHBOb3RwTHBScF1wYm90cFRwWHBLcE5vdHBVcFBvdHBTcFk%3D&busyo_name=cHlQcEg5cGN1cVclcE53cFxvZnEhcWdwdXB7cSFxK3B3cGxwdHFTb2ZwdnBrcSNxenEhcStwd3BscSFwfW9mcHJxenB1cXhxIXFncHVxO3BycWc%3D&lang=ja&ssi_code=K1015400350000-0000&title=' + document.title; 
 elA.appendChild(text); 
 document.getElementById('contactLink').appendChild(elA); 
 </script>
@@ -421,9 +421,9 @@ document.getElementById('contactLink').appendChild(elA);
 <div id="copyright">Copyright <abbr title="Copyright">&copy;</abbr> City of Kobe. All rights reserved.</div>
 
 </div><!-- /footer -->
-<!-- Created: 2017/10/03 14:19:01.984 GMT+9 -->
+<!-- Created: 2017/11/07 15:55:43.178 GMT+9 -->
 
 </div><!-- /wrapper -->
 </body>
 </html>
-<!-- Created: 2017/07/28 17:31:54.969 GMT+9 -->
+<!-- Created: 2017/10/31 08:55:14.639 GMT+9 -->
