--- a/www.city.kobe.lg.jp/life/support/carenet/shisetsu/yuuryo.html
+++ b/www.city.kobe.lg.jp/life/support/carenet/shisetsu/yuuryo.html
@@ -242,7 +242,7 @@
                    layout="button_count"></div>
               </div>
           </div>
-        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2017年9月15日</dd></dl><p>2017年9月1日現在</p>
+        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2017年10月15日</dd></dl><p>2017年10月1日現在</p>
     <h2 id="midashi87500">有料老人ホーム該当施設一覧（主に事業者向け）</h2><p>住所地特例の対象となる「有料老人ホーム」の定義に該当する施設の一覧です。サービス付き高齢者向け住宅等が含まれます。</p><ul class="link-list">
 
             <li class="doc-pdf">
@@ -293,7 +293,7 @@
 <div class="table"><!---- ソースは触らないでください   ----><table summary="兵庫区有料老人ホーム一覧" width="98%"><tbody><tr><th>施設名</th><th>定員</th><th>所在地</th><th width="14%">電話番号</th><th>施設の類型</th><th>最寄駅・停留所</th></tr><tr><td>そんぽの家　兵庫柳原</td><td align="middle">100</td><td>兵庫区三川口町3-5-15</td><td>（078）515-3431</td><td>介護付</td><td>【JR】兵庫駅</td></tr><tr><td>グラツイエ愛</td><td align="middle">7</td><td>兵庫区下沢通8-2-20</td><td>（078）512-5107</td><td>住宅型</td><td>【地下鉄西神・山手線】上沢駅</td></tr><tr><td>エクセレント神戸</td><td align="middle">56</td><td>兵庫区菊水町10-9-18</td><td>（078）531-6511</td><td>介護付</td><td>【神戸電鉄】長田駅</td></tr></tbody></table></div>
   
     <h3 id="midashi63848">北区</h3>
-<div class="table"><!---- ソースは触らないでください   ----><table summary="北区有料老人ホーム一覧" width="98%"><tbody><tr><th>施設名</th><th>定員</th><th>所在地</th><th width="15%">電話番号</th><th>施設の類型</th><th>最寄駅・停留所</th></tr><tr><td>ハーモニアス谷上</td><td align="middle">60</td><td>北区谷上南町15-10</td><td>（078）586-6888</td><td>介護付</td><td>【神鉄】【北神急行】谷上駅</td></tr><tr><td><a href="http://yuyunosato.or.jp/">神戸ゆうゆうの里</a></td><td align="middle">463</td><td>北区鳴子3-1-2</td><td>（078）594-9000</td><td>介護付</td><td>【神鉄】西鈴蘭台駅</td></tr><tr><td>リバティーベル六甲</td><td align="middle">163</td><td>北区山田町小部字向井谷1-1</td><td>（078）595-2444</td><td>介護付</td><td>【神鉄】鈴蘭台駅</td></tr><tr><td><a href="http://www.kizunahome.jp">きずなホームふなせ</a></td><td align="middle">72</td><td>北区有野台7-19-1</td><td>（078）987-9991</td><td>介護付</td><td>【神鉄】五社駅から【市バス】（62）（63）有野台8</td></tr></tbody></table></div>
+<div class="table"><!---- ソースは触らないでください   ----><table summary="北区有料老人ホーム一覧" width="98%"><tbody><tr><th>施設名</th><th>定員</th><th>所在地</th><th width="15%">電話番号</th><th>施設の類型</th><th>最寄駅・停留所</th></tr><tr><td>スーパー・コート神戸北(ハーモニアス谷上から名称変更)</td><td align="middle">60</td><td>北区谷上南町15-10</td><td>（078）586-6888</td><td>介護付</td><td>【神鉄】【北神急行】谷上駅</td></tr><tr><td><a href="http://yuyunosato.or.jp/">神戸ゆうゆうの里</a></td><td align="middle">463</td><td>北区鳴子3-1-2</td><td>（078）594-9000</td><td>介護付</td><td>【神鉄】西鈴蘭台駅</td></tr><tr><td>リバティーベル六甲</td><td align="middle">163</td><td>北区山田町小部字向井谷1-1</td><td>（078）595-2444</td><td>介護付</td><td>【神鉄】鈴蘭台駅</td></tr><tr><td><a href="http://www.kizunahome.jp">きずなホームふなせ</a></td><td align="middle">72</td><td>北区有野台7-19-1</td><td>（078）987-9991</td><td>介護付</td><td>【神鉄】五社駅から【市バス】（62）（63）有野台8</td></tr></tbody></table></div>
   
     <h3 id="midashi96095">長田区</h3>
 <div class="table"><!---- ソースは触らないでください   ----><table summary="長田区有料老人ホーム一覧" width="98%"><tbody><tr><th>施設名</th><th>定員</th><th>所在地</th><th width="15%">電話番号</th><th>施設の類型</th><th>最寄駅・停留所</th></tr><tr><td>長田すみれビレッジ</td><td align="middle">77</td><td>長田区房王寺町2-3-25</td><td>（078）612-3227</td><td>介護付</td><td>【神鉄】長田駅</td></tr></tbody></table></div>
@@ -376,7 +376,7 @@
   <br />
   電話：078-322-5226  Fax：078-322-6046
   <span class="contactLink" id="contactLink">
-    <a href="https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFQicFgpcENecFtVcFZOcFJwKXBYcE9wT3BScExwTm90cExwUnBdcGJvdHBUcFhwS3BOb3RwVXBQb3RwU3BZ&busyo_name=cHk6cEhIcFV1cVckcHV3cFxvZnEhcWdwdXB7cSFxK3B3cGxwdHFTb2ZwdnBrcSNxenEhcStwd3BscSFwfW9mcHZwa3EjcXpxIXErcHdwbHBycWdvZnB3cGRweXFpcHlxOnB9ciRwdXBA&lang=ja&ssi_code=K1015400150000-0002&title=">このページの内容についてメールで問い合わせする</a></span>
+    <a href="https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFRqcFhscHNecFs2cFROcFJwKXBYcE9wT3BScExwTm90cExwUnBdcGJvdHBUcFhwS3BOb3RwVXBQb3RwU3BZ&busyo_name=cHlrcEhxcGh1cVcocGd3cFxvZnEhcWdwdXB7cSFxK3B3cGxwdHFTb2ZwdnBrcSNxenEhcStwd3BscSFwfW9mcHZwa3EjcXpxIXErcHdwbHBycWdvZnB3cGRweXFpcHlxOnB9ciRwdXBA&lang=ja&ssi_code=K1015400150000-0002&title=">このページの内容についてメールで問い合わせする</a></span>
 <script type="text/javascript">
 var elContainer = document.getElementById("contactLink"); 
  while(elContainer.firstChild) { 
@@ -384,7 +384,7 @@ var elContainer = document.getElementById("contactLink");
  } 
 text = document.createTextNode('このページの内容についてメールで問い合わせする'); 
 elA = document.createElement('a'); 
-elA.href = 'https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFQicFgpcENecFtVcFZOcFJwKXBYcE9wT3BScExwTm90cExwUnBdcGJvdHBUcFhwS3BOb3RwVXBQb3RwU3BZ&busyo_name=cHk6cEhIcFV1cVckcHV3cFxvZnEhcWdwdXB7cSFxK3B3cGxwdHFTb2ZwdnBrcSNxenEhcStwd3BscSFwfW9mcHZwa3EjcXpxIXErcHdwbHBycWdvZnB3cGRweXFpcHlxOnB9ciRwdXBA&lang=ja&ssi_code=K1015400150000-0002&title=' + document.title; 
+elA.href = 'https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFRqcFhscHNecFs2cFROcFJwKXBYcE9wT3BScExwTm90cExwUnBdcGJvdHBUcFhwS3BOb3RwVXBQb3RwU3BZ&busyo_name=cHlrcEhxcGh1cVcocGd3cFxvZnEhcWdwdXB7cSFxK3B3cGxwdHFTb2ZwdnBrcSNxenEhcStwd3BscSFwfW9mcHZwa3EjcXpxIXErcHdwbHBycWdvZnB3cGRweXFpcHlxOnB9ciRwdXBA&lang=ja&ssi_code=K1015400150000-0002&title=' + document.title; 
 elA.appendChild(text); 
 document.getElementById('contactLink').appendChild(elA); 
 </script>
@@ -405,9 +405,9 @@ document.getElementById('contactLink').appendChild(elA);
 <div id="copyright">Copyright <abbr title="Copyright">&copy;</abbr> City of Kobe. All rights reserved.</div>
 
 </div><!-- /footer -->
-<!-- Created: 2017/10/03 14:19:01.338 GMT+9 -->
+<!-- Created: 2017/11/07 15:55:42.774 GMT+9 -->
 
 </div><!-- /wrapper -->
 </body>
 </html>
-<!-- Created: 2017/09/19 09:03:54.924 GMT+9 -->
+<!-- Created: 2017/10/16 18:02:46.152 GMT+9 -->
