--- a/www.city.kobe.lg.jp/life/support/carenet/shisetsu/jigyoshaboshu.html
+++ b/www.city.kobe.lg.jp/life/support/carenet/shisetsu/jigyoshaboshu.html
@@ -239,16 +239,23 @@
                    layout="button_count"></div>
               </div>
           </div>
-        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2017年9月16日</dd></dl><p>介護保険施設等の整備事業者募集について、募集要項へのリンク等を掲載しています。</p>
+        <dl class="lastUpdate"><dt>最終更新日</dt><dd>2017年10月10日</dd></dl><p>介護保険施設等の整備事業者募集について、募集要項へのリンク等を掲載しています。</p>
     <h2 id="midashi61731">現在実施中の募集について</h2><ul class="link-list">
 
+            <li>
+              <a href="/life/support/carenet/shisetsu/2910jigyoushaboshu.html">平成29年度第2回介護保険施設等整備事業者募集について</a>
+              </li>
+            <li>
+              <a href="/life/support/carenet/shisetsu/2910jigyoushaboshu.html">平成29年度認知症高齢者グループホーム整備事業者募集について</a>
+              </li>
+            <li>
+              <a href="/life/support/carenet/shisetsu/2910jigyoushaboshu.html">平成29年度特定施設入居者生活介護の指定をうける有料老人ホーム又はサービス付き高齢者向け住宅事業者募集について</a>
+              </li>
             <li>
               <a href="/life/support/carenet/shisetsu/tokuyou_kyougizoushou.html">既存特別養護老人ホームにおける協議増床制度について</a>
               </li>
     </ul>
-    <h2 id="midashi73633">今後実施予定の募集について</h2>
-<u>平成29年10月募集予定</u><br />特別養護老人ホーム（広域型・地域密着型）、介護老人保健施設、介護型ケアハウス、（看護）小規模多機能型居宅介護事業所、認知症高齢者グループホーム、介護付有料老人ホーム<br /><br />※募集時期は多少前後する場合がございます。<br />※募集内容については決まり次第、神戸ケアネット内「臨時のお知らせ」及び本ページ内にてお知らせいたします。
-  
+    <h2 id="midashi73633">今後実施予定の募集について</h2><p>実施予定が決まり次第掲載いたします。</p>
     <h2 id="midashi89101">受付（または申込）を終了した募集について（参考）</h2><p>※既に受付（または申込）を終了した募集について、参考として掲載しています。</p><ul class="link-list">
 
             <li>
@@ -366,7 +373,7 @@
   <br />
   電話：078-322-5226  Fax：078-322-6046
   <span class="contactLink" id="contactLink">
-    <a href="https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFQicFgpcENecFtVcFZOcFJwKXBYcE9wT3BScExwTm90cExwUnBdcGJvdHBUcFhwS3BOb3RwVXBQb3RwU3BZ&busyo_name=cHk6cEhIcFV1cVckcHV3cFxvZnEhcWdwdXB7cSFxK3B3cGxwdHFTb2ZwdnBrcSNxenEhcStwd3BscSFwfW9mcHZwa3EjcXpxIXErcHdwbHBycWdvZnB3cGRweXFpcHlxOnB9ciRwdXBA&lang=ja&ssi_code=K1015400150000-0002&title=">このページの内容についてメールで問い合わせする</a></span>
+    <a href="https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFRqcFhscHNecFs2cFROcFJwKXBYcE9wT3BScExwTm90cExwUnBdcGJvdHBUcFhwS3BOb3RwVXBQb3RwU3BZ&busyo_name=cHlrcEhxcGh1cVcocGd3cFxvZnEhcWdwdXB7cSFxK3B3cGxwdHFTb2ZwdnBrcSNxenEhcStwd3BscSFwfW9mcHZwa3EjcXpxIXErcHdwbHBycWdvZnB3cGRweXFpcHlxOnB9ciRwdXBA&lang=ja&ssi_code=K1015400150000-0002&title=">このページの内容についてメールで問い合わせする</a></span>
 <script type="text/javascript">
 var elContainer = document.getElementById("contactLink"); 
  while(elContainer.firstChild) { 
@@ -374,7 +381,7 @@ var elContainer = document.getElementById("contactLink");
  } 
 text = document.createTextNode('このページの内容についてメールで問い合わせする'); 
 elA = document.createElement('a'); 
-elA.href = 'https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFQicFgpcENecFtVcFZOcFJwKXBYcE9wT3BScExwTm90cExwUnBdcGJvdHBUcFhwS3BOb3RwVXBQb3RwU3BZ&busyo_name=cHk6cEhIcFV1cVckcHV3cFxvZnEhcWdwdXB7cSFxK3B3cGxwdHFTb2ZwdnBrcSNxenEhcStwd3BscSFwfW9mcHZwa3EjcXpxIXErcHdwbHBycWdvZnB3cGRweXFpcHlxOnB9ciRwdXBA&lang=ja&ssi_code=K1015400150000-0002&title=' + document.title; 
+elA.href = 'https://www.ssl.city.kobe.lg.jp/toiawase/form_confirm.cgi?busyo_email=cFRqcFhscHNecFs2cFROcFJwKXBYcE9wT3BScExwTm90cExwUnBdcGJvdHBUcFhwS3BOb3RwVXBQb3RwU3BZ&busyo_name=cHlrcEhxcGh1cVcocGd3cFxvZnEhcWdwdXB7cSFxK3B3cGxwdHFTb2ZwdnBrcSNxenEhcStwd3BscSFwfW9mcHZwa3EjcXpxIXErcHdwbHBycWdvZnB3cGRweXFpcHlxOnB9ciRwdXBA&lang=ja&ssi_code=K1015400150000-0002&title=' + document.title; 
 elA.appendChild(text); 
 document.getElementById('contactLink').appendChild(elA); 
 </script>
@@ -395,9 +402,9 @@ document.getElementById('contactLink').appendChild(elA);
 <div id="copyright">Copyright <abbr title="Copyright">&copy;</abbr> City of Kobe. All rights reserved.</div>
 
 </div><!-- /footer -->
-<!-- Created: 2017/10/03 14:19:01.338 GMT+9 -->
+<!-- Created: 2017/11/07 15:55:42.774 GMT+9 -->
 
 </div><!-- /wrapper -->
 </body>
 </html>
-<!-- Created: 2017/09/14 08:53:34.920 GMT+9 -->
+<!-- Created: 2017/10/05 13:24:00.250 GMT+9 -->
